[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/components/enemy_basic/gun/EnemyGun.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/enemy_basic/gun/shot/EnemyShot.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 64 )

[node name="EnemyGun" type="Node2D"]
rotation = -1.5708
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShootingDetector" type="Area2D" parent="."]
collision_layer = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Collision" type="CollisionShape2D" parent="ShootingDetector"]
visible = false
position = Vector2( 272, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="KeepShooting" type="Timer" parent="ShootingDetector"]
wait_time = 0.6

[node name="EnemyShot" parent="." instance=ExtResource( 2 )]

[connection signal="area_entered" from="ShootingDetector" to="." method="_on_Detector_area_entered"]
[connection signal="area_exited" from="ShootingDetector" to="." method="_on_Detector_area_exited"]
[connection signal="timeout" from="ShootingDetector/KeepShooting" to="." method="_on_KeepShooting_timeout"]
